# out-of-black-ink

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cloudflare-worker.yml  npm-publish.yml  pages.yml  publish.yml
apps/cloudflare-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
apps/cloudflare-worker/src/: index.js  index.ts
apps/cloudflare-worker/test/: worker.test.js  worker.test.ts
apps/web/: LICENSE  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
apps/web/public/: privacy.html  terms.html
apps/web/src/: main.js  main.ts  pdf-recolor.js  pdf-recolor.ts  styles.css
apps/web/test/: pdf-recolor.test.js  pdf-recolor.test.ts
docs/: CHATGPT_APP.md  CHATGPT_VALIDATION.md  CLOUDFLARE_WORKER.md  DEPENDENCY_POLICY.md  LICENSE_COMPLIANCE.md  PUBLISHING.md  index.html
docs/assets/: app.js  styles.css
src/out_of_black_ink/: cli.py  core.py
tests/: test_cli.py  test_core.py
