[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "out-of-black-ink"
version = "0.1.0"
description = "Convert black/gray PDF content into colored ink-friendly output"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Dorad Soft" }]
dependencies = [
  "numpy>=1.23",
  "Pillow>=10.0",
  "pypdfium2>=4.30",
]
keywords = ["pdf", "printer", "ink", "color", "pillow", "pdfium"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Printing",
]

[project.urls]
Homepage = "https://github.com/doradsoft/out-of-black-ink"
Repository = "https://github.com/doradsoft/out-of-black-ink"

[project.scripts]
out-of-black-ink = "out_of_black_ink.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/out_of_black_ink"]
