[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "out-of-black-ink"
version = "0.1.0"
description = "Convert black/gray PDF content into colored ink-friendly output"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Dorad Soft" }]
dependencies = [
  "numpy>=1.23,<3",
  "Pillow>=10.0,<13",
  "pypdfium2>=4.30,<6",
]
keywords = ["pdf", "printer", "ink", "color", "pillow", "pdfium"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Printing",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.urls]
Changelog = "https://github.com/doradsoft/out-of-black-ink/releases"
Issues = "https://github.com/doradsoft/out-of-black-ink/issues"
Homepage = "https://github.com/doradsoft/out-of-black-ink"
Repository = "https://github.com/doradsoft/out-of-black-ink"

[project.scripts]
out-of-black-ink = "out_of_black_ink.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["packages/python/src/out_of_black_ink"]

[tool.hatch.build.targets.sdist]
include = [
  "/packages/python/src",
  "/packages/python/tests",
  "/packages/python/examples",
  "/docs",
  "/CONTRIBUTING.md",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["packages/python/tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
  "W",
]
